--- a/gb/21/11/24/n13395886.md
+++ b/gb/21/11/24/n13395886.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bejthd314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/bejthd314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bejthd314/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bejthd314/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bejthd314/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bejthd314/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bejthd314/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>温馨视频：黑猩猩宝宝被它姨妈收养</h2>
-<a href="https://dqgl8k1bfvgsc.cloudfront.net/U1pz6E4Rz"><img width="600" src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bejthd314/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d13zv7yhtbxwll.cloudfront.net/G2dz6E4Rg"><img width="600" src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>黑猩猩Kitoko与自己的幼崽和姐姐的宝宝在一起玩耍。（巴塞尔动物园提供）
 </h6>
 <hr>
-	<p>【大纪元2021年11月24日讯】（英文大纪元记者Louise Bevan报导／文韵编译）瑞士一家动物园的一只怀孕黑猩猩<ahref="https://github.com/bejthd314/djy/blob/master/gb/tag/%E6%94%B6%E5%85%BB.md#1">收养</a>它生病姐姐的婴儿，即使它自己的宝宝出生后，仍然照顾姐姐的幼崽。</p>
+	<p>【大纪元2021年11月24日讯】（英文大纪元记者Louise Bevan报导／文韵编译）瑞士一家动物园的一只怀孕黑猩猩<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%94%B6%E5%85%BB.md#1">收养</a>它生病姐姐的婴儿，即使它自己的宝宝出生后，仍然照顾姐姐的幼崽。</p>
 <p>10 月 13 日，瑞士(Switzerland)巴塞尔(Basel)市的非营利组织巴塞尔动物园(Basel Zoo)在 Facebook 上分享了养母与两只幼崽的感人视频。</p>
 <figure id="attachment_13395893" aria-describedby="caption-attachment-13395893" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13395893-ET-chimpanse-kitoko-sabaki-sangala-3-450x675.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-13395893" src="https://i.epochtimes.com/assets/uploads/2021/11/id13395893-ET-chimpanse-kitoko-sabaki-sangala-3-450x675.jpg" alt="" width="450" b="675" /></a><figcaption id="caption-attachment-13395893" class="wp-caption-text">（巴塞尔动物园提供）</figcaption></figure>
-<p>“雌性黑猩猩 Kitoko 目前正在照养两只幼崽。” 动物园在帖子中解释说：“她<ahref="https://github.com/bejthd314/djy/blob/master/gb/tag/%E6%94%B6%E5%85%BB.md#1">收养</a>了姐姐菲菲(Fifi)的女儿，菲菲因健康原因无法照顾新生儿。”</p>
+<p>“雌性黑猩猩 Kitoko 目前正在照养两只幼崽。” 动物园在帖子中解释说：“她<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%94%B6%E5%85%BB.md#1">收养</a>了姐姐菲菲(Fifi)的女儿，菲菲因健康原因无法照顾新生儿。”</p>
 <p>照片显示， Kitoko 与自己的雄性幼崽巴基( Sabaki) 和姐姐的宝宝桑加拉( Sangala) 拥抱在一起玩耍和哺乳。</p>
 <figure id="attachment_13395897" aria-describedby="caption-attachment-13395897" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13395897-ET-chimpanse-kitoko-sabaki-sangala-1-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13395897" src="https://i.epochtimes.com/assets/uploads/2021/11/id13395897-ET-chimpanse-kitoko-sabaki-sangala-1-450x300.jpg" alt="" width="601" b="400" /></a><figcaption id="caption-attachment-13395897" class="wp-caption-text">（巴塞尔动物园提供）</figcaption></figure>
 <p>6月26日，28岁的菲菲生下了健康的宝宝桑加拉。动物园在一份新闻稿中解释说，一切看起来都很好，直到菲菲 “不寻常” 的提前将幼崽交给黑猩群体的其它成员。</p>
@@ -20,12 +20,12 @@
 <p>多谢巴塞尔动物园的资源，这位优秀的妈妈从那时起就成功地养育了这对表亲。</p>
 <figure id="attachment_13395904" aria-describedby="caption-attachment-13395904" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13395904-ET-chimpanse-kitoko-sabaki-sangala-8-450x675.jpeg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-13395904" src="https://i.epochtimes.com/assets/uploads/2021/11/id13395904-ET-chimpanse-kitoko-sabaki-sangala-8-450x675.jpeg" alt="" width="450" b="675" /></a><figcaption id="caption-attachment-13395904" class="wp-caption-text">（巴塞尔动物园提供）</figcaption></figure>
 <p>动物园表示，六岁以前的黑猩猩需要依赖其母亲。</p>
-<p>过早失去母亲的<ahref="https://github.com/bejthd314/djy/blob/master/gb/tag/%E9%BB%91%E7%8C%A9%E7%8C%A9%E5%AE%9D%E5%AE%9D.md#1">黑猩猩宝宝</a>会降低生存概率，除非群体中的其它成员接手。由<ahref="https://github.com/bejthd314/djy/blob/master/gb/tag/%E5%A7%A8%E5%A6%88.md#1">姨妈</a>收养的黑猩猩成活率最高。</p>
+<p>过早失去母亲的<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E9%BB%91%E7%8C%A9%E7%8C%A9%E5%AE%9D%E5%AE%9D.md#1">黑猩猩宝宝</a>会降低生存概率，除非群体中的其它成员接手。由<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%A7%A8%E5%A6%88.md#1">姨妈</a>收养的黑猩猩成活率最高。</p>
 <figure id="attachment_13395907" aria-describedby="caption-attachment-13395907" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13395907-ET-chimpanse-kitoko-sabaki-sangala-9-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13395907" src="https://i.epochtimes.com/assets/uploads/2021/11/id13395907-ET-chimpanse-kitoko-sabaki-sangala-9-450x300.jpeg" alt="" width="601" b="400" /></a><figcaption id="caption-attachment-13395907" class="wp-caption-text">（巴塞尔动物园提供）</figcaption></figure>
 <p>在撰写本报告时，菲菲的情况有改善，但后腿仍然跛行。巴塞尔动物园的兽医与人类妇科医生和心脏病专家仍在设法为菲菲做出诊断。</p>
-<p>至于几个月大的表亲桑加拉和萨巴基，他们在Kitoko的照顾下茁壮成长。动物园说：“它们都做得很好，发育正常。”</p>
+<p>至于几个月大的表亲桑加拉和萨巴基，他们在Kitoko的照顾下茁壮成长。动物园说：“它们都做得很好，发育正常。”◇</p>
 <p>观看视频：</p>
-<p style="text-align: center;"><a title="YouTube video player" src=""></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/U1pz6E4Rz"><img width="600" src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bejthd314/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/mhBNLTRfkTQ" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
+<p style="text-align: center;"><a title="YouTube video player" src=""></a><a href="https://d13zv7yhtbxwll.cloudfront.net/G2dz6E4Rg"><img width="600" src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/mhBNLTRfkTQ" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
 （巴塞尔动物园提供）</p>
 <p style="text-align: left;">责任编辑：韩玉</p>
 	
@@ -33,41 +33,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/17/7/16/n9406619.md#1">18年未见 两黑猩猩一眼认出救命恩人抱紧不放</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/18/5/29/n10436237.md#1">59岁黑猩猩临终拒食 看到谁在喂它 深情拥抱</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/18/7/4/n10535403.md#1">黑猩猩不忘救命之恩 暖心举动感动数万网民</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/18/7/6/n10543682.md#1">超温馨！获救小黑猩猩坐飞行员腿上飞往新家</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/17/7/16/n9406619.md#1">18年未见 两黑猩猩一眼认出救命恩人抱紧不放</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/29/n10436237.md#1">59岁黑猩猩临终拒食 看到谁在喂它 深情拥抱</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/18/7/4/n10535403.md#1">黑猩猩不忘救命之恩 暖心举动感动数万网民</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/18/7/6/n10543682.md#1">超温馨！获救小黑猩猩坐飞行员腿上飞往新家</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066904.md#1" target="_blank">信力建：谁抽去了中国人的脊梁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/20/n13388351.md#1">【舞蹈三剑客】神韵演员如何保持良好体态</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/24/n13395310.md#1">梁锦祥：远东集团被罚款 台商将逐渐撤离大陆</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/23/n13394268.md#1">【秦鹏直播】联想大麻烦了？被逼问“七宗罪”</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13391522.md#1">【微视频】拜登要求习近平释放储备油</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13389935.md#1">SpaceX发射火箭看到意外奇景</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13390029.md#1">36位西人：在天安门广场上为自由而战</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同抚养小孩</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同抚养小孩</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13391890.md#1">艺人大S与汪小菲宣布离婚 大陆网民反应两极</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/23/n13392248.md#1">港片《时代革命》金马影展首映 观众泣不成声</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/21/n13389860.md#1">《少年》香港禁映 导演:影片是通往自由的窗口</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13391647.md#1">维生素E不只抗老 有4大功效 2招正确补充</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/23/n13392522.md#1">为救失去意识女车主 荷兰男子开车去给她撞</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13391667.md#1">睡不着、睡不好？害你失眠的7种坏习惯</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/22/n13390335.md#1">全球最会赚钱的车厂 每秒逾8700美元入袋</a></li>
-<li><a href="https://github.com/bejthd314/djy/blob/master/gb/21/11/23/n13392810.md#1">纽西兰女子报警：我被负鼠“软禁”在家！</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751795.md#1">【方菲访谈】林培瑞：六四与今天的中国（上）</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bejthd314/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bejthd314/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/24/n13395886.htm">温馨视频：黑猩猩宝宝被它姨妈收养</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/24/n13395886.htm">温馨视频：黑猩猩宝宝被它姨妈收养</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bejthd314/djy/blob/master/gb/21/11/24/n13395886.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bejthd314/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bejthd314/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bejthd314/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bejthd314/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bejthd314/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/21/11/24/n13395886.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
